[tool.poetry]
name = "smart-disaster-simulator"
version = "0.1.0"
description = "A simulator for disaster response using reinforcement learning."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
rllib = "^1.0"
gym = "^0.21"
mapbox = "^1.0"
numpy = "^1.21"
pandas = "^1.3"
requests = "^2.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"