[metadata]
name = smart-disaster-simulator
version = 0.1.0
description = A Smart Disaster Response Simulator using reinforcement learning for real-time disaster zone management.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/smart-disaster-simulator
license = MIT

[options]
packages = find:
install_requires =
    Flask
    gym
    ray[rllib]
    requests
    mapbox
    numpy
    pandas
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    run_simulation = examples.run_simulation:main